# vsomeip

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.tipi/: deps
implementation/tracing/: BUILD.bazel
implementation/utility/: BUILD.bazel
